[project]
name = "almonds"
authors = [ { name = "Armand Krynauw" } ]
version = "0.1.0"
description = "Hybrid Learning in Neural Networks for Almond Classification"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "joblib>=1.4.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "numpy>=2.1.1",
    "pandas>=2.2.2",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "skorch>=1.0.0",
    "torch>=2.4.1",
]
